session-12-ingress-configmaps-secrets/03-ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  namespace: s12-demo
  labels:
    app: yatri-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          resources:
            requests: { cpu: 20m, memory: 32Mi }
            limits:   { cpu: 100m, memory: 64Mi }
      volumes:
        - name: html
          configMap:
            name: frontend-html
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
  namespace: s12-demo
spec:
  type: ClusterIP
  selector:
    app: yatri-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
